--- a/CSS/index.css
+++ b/CSS/index.css
@@ -96,16 +96,8 @@ header .navItems li{
    border-radius: 10px;
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
    margin: 5% 3%;
+   transition: transform 0.2s ease-in-out;
 }
-
-.showcase-form {
-   position: relative;
-   top: 60px;
-   height: 350px;
-   width: 400px;
-   padding: 40px;
-   z-index: 100;
- }
 
 .first-section {
   margin-bottom: 5%;
@@ -283,6 +275,20 @@ footer .copyrights p{
    color: white;
    font-size: 30px;
    width: 100%;
+}
+
+header .navItems a:hover{
+   text-decoration: underline;
+}
+
+.first-section .profile-description button:hover {
+   cursor: pointer;
+   color:#3f6184;
+   background-color: white;
+}
+
+.second-section .container .card:hover {
+   transform: translateY(-15px);
 }
 
 /* Mobile */
