--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,9 @@
         </ul>
 
         <ul class="contact">
-            <li><i class="fa-brands fa-facebook"></i></li>
-            <li><i class="fa-brands fa-github"></i></li>
-            <li><i class="fa-solid fa-envelope"></i></li>
+            <li><a href="https://www.facebook.com/alvinjohn.tolosa" class="fa-brands fa-facebook"></a></li>
+            <li><a href=" https://github.com/" class="fa-brands fa-github"></a></li>
+            <li><a href=" https://mail.google.com/mail/u/0/#inbox" class="fa-solid fa-envelope"></a></li>
         </ul>
     </header>
 
@@ -80,9 +80,9 @@
     <footer>
         <h4>Alvin John Tolosa</h4>
         <ul class="footer-contact">
-            <li><i class="fa-brands fa-facebook"></i></li>
-            <li><i class="fa-brands fa-github"></i></li>
-            <li><i class="fa-solid fa-envelope"></i></li>
+            <li><a href="https://www.facebook.com/alvinjohn.tolosa" class="fa-brands fa-facebook"></a></li>
+            <li><a href=" https://github.com/" class="fa-brands fa-github"></a></li>
+            <li><a href=" https://mail.google.com/mail/u/0/#inbox" class="fa-solid fa-envelope"></a></li>
         </ul>
         <div class="copyrights">
             <i class="fa-regular fa-copyright"></i>
